[package]
name = "rust-actix-web"
version = "0.1.0"
authors = ["wasmup <@wasmup>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6" # Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust